// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render the button with tooltipText correctly 1`] = `
<button
  className="Button rectangle full only-icon sc-htpNat hztAbK"
  disabled={false}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
  <div
    className="Badge Button__tooltip-text darkGray xs sc-bdVaJa jCQAeT"
    color="darkGray"
    size="xs"
  >
    Testing tooltip text
  </div>
</button>
`;

exports[`Button should render the circle shaped button correctly 1`] = `
<button
  className="Button circle full only-icon sc-htpNat hztAbK"
  disabled={false}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the default button correctly 1`] = `
<button
  className="Button rectangle full only-icon sc-htpNat hztAbK"
  disabled={false}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the disabled button correctly 1`] = `
<button
  className="Button rectangle full disabled only-icon sc-htpNat jJrbtl"
  disabled={true}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the ghost and disabled button correctly 1`] = `
<button
  className="Button rectangle disabled ghost only-icon sc-htpNat cGgVsK"
  disabled={true}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the ghost button correctly 1`] = `
<button
  className="Button rectangle ghost only-icon sc-htpNat jKgCjP"
  disabled={false}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the textOnly and ghost button correctly 1`] = `
<button
  className="Button rectangle full textOnly only-icon sc-htpNat fapNY"
  disabled={false}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;
